scylla/ingressroute-tcp.yaml
# scylla/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: scylla-cql
  namespace: scylla
spec:
  entryPoints:
    - scylla-cql   # certifique-se de criar esse entryPoint na configuração estática do Traefik
  routes:
    - match: HostSNI(`*`)
      services:
        - name: scylla   # deve coincidir com .spec.source.helm.releaseName
          port: 9042
